--- a/crates/monocle_cli/Cargo.toml
+++ b/crates/monocle_cli/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 axum = { workspace = true, features = ["macros"] }
+axum-test = "16.4.1"
 clap = { workspace = true, features = ["derive", "env"] }
 color-eyre.workspace = true
 tokio = { workspace = true, features = ["full"] }
