--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,10 @@ color-eyre = "0.6"
 tokio = { version = "1.42.0", features = ["full"] }
 
 # local workspace deps go here
+
+# development dependencies
+criterion = { version = "0.5", features = [
+    "async",
+    "async_tokio",
+    "html_reports",
+] }
