switch to divan for benchmarking
Switching from criterion to divan for benchmarking. (Divan supports
benchmarking memory allocations in addition to speed)

--- a/crates/monocle_cli/Cargo.toml
+++ b/crates/monocle_cli/Cargo.toml
@@ -11,11 +11,7 @@ color-eyre.workspace = true
 tokio = { workspace = true, features = ["full"] }
 
 [dev-dependencies]
-criterion = { workspace = true, features = [
-    "async",
-    "async_tokio",
-    "html_reports",
-] }
+divan.workspace = true
 
 [[bench]]
 name = "ping"
