--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,4 @@ tokio = { version = "1.42.0", features = ["full"] }
 # local workspace deps go here
 
 # development dependencies
-criterion = { version = "0.5", features = [
-    "async",
-    "async_tokio",
-    "html_reports",
-] }
+divan = "0.1.17"
